--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
+    <h1 class="page-heading">{{ page.title }} <img src="https://github.com/sajjjadayobi/blog/blob/master/images/bio-c.png" alt="Avatar"/> </h1>
   {%- endif -%}
 
   {{ content | markdownify }}
